2010-06-21	Peter Dufault <dufault@hda.com>

	PR 1583/bsps
	* shared/startup/panic.c: Remove reference to ITRON.

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* shared/bootloader/em86.c, shared/bootloader/mm.c,
	shared/console/polled_io.c, shared/irq/irq_init.c,
	shared/startup/bspstart.c: Remove warnings.

2010-04-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/flash/flash.c: Include <unistd.h>.

2010-04-08      Eric Norum <wenorum@lbl.gov>

	* shared/motorola/vpd.c: add include to pick up read()/close() prototypes.

2010-03-27      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* shared/startup/bspstart.c, shared/startup/pgtbl_setup.c: fix
	prototypes

2010-03-25      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* aclocal.m4: add "gwlcfm" bsp

2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* shared/console/uart.c, shared/console/uart.h: adapted to new
	prototype for *_write function

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1483/cpukit
	* shared/pci/pci.c: Rename pci_config into rtems_pci_config_t.

2009-12-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/irq/irq_init.c: Add missing initializer.

2009-12-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/console/polled_io.c: Add prototype for boot_udelay.

2009-12-03	Till Straumann <strauman@slac.stanford.edu>

	* acinclude.m4, beatnik: Imported/added 'beatnik'
	BSP.

2009-12-01	Till Straumann <strauman@slac.stanford.edu>

	* shared/start/start.S: Added AltiVec support (initializing
	MSR[VE], VSCR and VRSAVE).

2009-12-01	Till Straumann <strauman@slac.stanford.edu>

	* shared/vme/vme_universe.c: moved extern declaration
	out of local scope.

2009-12-01	Till Straumann <strauman@slac.stanford.edu>

	* shared/startup/panic.c: Fixed compiler warning.

2009-12-01	Till Straumann <strauman@slac.stanford.edu>

	* shared/startup/probeMemEnd.c: removed __here_s_the_real_end
	check. __rtems_end should be good enough.
